Fixing a lot of frontend problems.
